2016-05-24  NIIBE Yutaka  <gniibe@fsij.org>

	* example-fs-bb48/command.c: New.
	* example-fs-bb48: Update example CDC device.

2016-05-23  NIIBE Yutaka  <gniibe@fsij.org>

	* chopst.x (chx_sched) [__ARM_ARCH_6M__]: Maintain PSR.

2016-05-23  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.c (chopstx_poll): Fix a race.  Check COUNTER.

	* example-cdc/usb-cdc.c (tty_input_char): Include newline.
	* example-cdc/sample.c: Handle newline.

	* example-fs-bb48/usb-cdc.c: Update from example-cdc.
	* example-fs-bb48/tty.h: Likewise.
	* example-fs-bb48/sample.c: Follow the change.

2016-05-20  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.c (chopstx_usec_wait_var): internal function.
	(chopstx_wakeup_usec_wait): Remove.

2016-05-19  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 0.11.
	* doc/chopstx.texi (VERSION): 0.11.

2016-05-18  NIIBE Yutaka  <gniibe@fsij.org>

	* eventflag.c: Update using chopstx_poll and offer API for poll.

	* chopstx.c (requeue): New.
	(chopstx_mutex_lock, chopstx_join): Fix by requeue.
	(chopstx_main_init): Remove.
	(chopstx_setpriority): New.

	* example-cdc/usb-cdc.c: Prepare for multiple TTYs.

2016-05-17  NIIBE Yutaka  <gniibe@fsij.org>

	* example-cdc/usb-cdc.c: Update as TTY input/output with line
	editing support.
	* example-cdc/sample.c: Likewise.
	* example-cdc/tty.h: Rename from stream.h.

	* chopstx.c (chopstx_poll): Set ->ready = 0.
	Add spinlock for ll_dequeue.

2016-05-16  NIIBE Yutaka  <gniibe@fsij.org>

	* example-cdc/sys.c (nvic_enable_vector): Remove.
	(usb_lld_sys_init): Don't setup NVIC priority.
	(sys_version): sys version 3.0.

2016-05-16  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.h (CHOPSTX_EXIT_SUCCESS, CHOPSTX_EXIT_CANCELED)
	(CHOPSTX_EXIT_CANCELED_IN_SYNC): Remove.
	(CHOPSTX_CANCELED): New.

	* chopstx.c (chopstx_testcancel): Use CHOPSTX_CANCELED.
	(chx_sched, chx_snooze): Re-define return values cleanly.
	(chopstx_cancel): Use return value of chx_sched to cancel.
	(chopstx_cond_wait, chopstx_join, chopstx_poll): Implement