@@ -1,3 +1,9 @@
+2016-05-26  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* example-fs-bb48/adc_kl27z.c: Use DMA0 and DMA1.
+	* example-fs-bb48/command.c (cmd_adc): Rename from
+	cmd_temperature.
+
 2016-05-24  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* example-fs-bb48/command.c: New.
